[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hidden_heterogeneity"
version = "0.1.0"
description = "Heterogeneity analysis project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [

    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.6",
    "econml>=0.16.0"

]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "ipykernel>=6.29.0"
]
